# selenium_with_pytest

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml
pages/: base_page.py  login_page.py
testcases/: conftest.py  test_login.py
utilities/: custom_logger.py
